fix: adding overflow-x: hidden, removing padding 1 rem from index.css, centralizing grid content

--- a/frontend/src/assets/css/App.css
+++ b/frontend/src/assets/css/App.css
@@ -1,5 +1,5 @@
 .App{
-  width: 100vw;
+  width: 100%;
 
   text-align: center;
   display: flex;
