--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -1,7 +1,6 @@
 .navbar-container{
   position: fixed;
   top: 15px;
-  left: 5%;
   padding: 0 1rem;
   width: 90%;
   height: 70px;
